kubernetes/1.17.9/use-host-docker-socket.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker
  labels:
    app: docker
spec:
  containers:
  - name: docker
    image: docker:19.03.13
    stdin: true
    tty: true
    volumeMounts:
    - mountPath: "/var/run/docker.sock"
      name: dockersock
#  nodeSelector:
#    kubernetes.io/hostname: "ip-10-0-66-116.ap-southeast-1.compute.internal"
  volumes:
  - name: dockersock
    hostPath:
      # directory location on host
      path: /var/run/docker.sock
      # this field is optional
      #type: Directory
